--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
-  "framework": "nextjs",
-  "rootDirectory": "frontend",
-  "buildCommand": "npm install && npm run build",
-  "installCommand": "npm install"
+  "buildCommand": "cd frontend && npm install && npm run build",
+  "installCommand": "npm install",
+  "devCommand": "cd frontend && npm run dev",
+  "framework": "nextjs"
 }
